--- a/css/rjasHome.css
+++ b/css/rjasHome.css
@@ -718,4 +718,101 @@ i{
     .saller-service span{
         font-size:12px;
     }
+    .main-box1{
+        padding:15px 10px;
+        margin-left:10px;
+    }
+    .main-box1 i{
+        font-size:15px;
+        cursor: pointer;
+    }
+    .main-box1 span{
+        margin-left: 10px;
+    }
+    .main-box-3{
+        padding:15px 10px;
+        margin-left:10px;
+    }
+    .main-box-3 p{
+        margin-top:20px;
+        margin-left:5px;
+    }
+    .main-box-radio{
+        padding:5px 10px;
+        margin-left:10px;
+    }
+    .main-box-radio h4{
+        margin-bottom: 40px;
+    }
+    .box-radio{
+        padding:10px 0;
+    }
+    .main-box-radio .add-ons{
+        position: absolute;
+        right:0;
+    }
+    .radio{
+        display: flex;
+        margin-left:7px;
+        margin-bottom:25px;
+    }
+    .radio label{
+        margin-top:10px;
+        margin-left:5px;
+    }
+    .main-box-radio p{
+        display: inline-block;
+    }
+    .main-box-radio .radio-span{
+        margin-left:8px;
+    }
+    .main-box-radio .radio-span span{
+        padding:5px 5px;
+        background-color: #E9F9F1;
+        margin-left: 10px;
+    }
+    .all-purchase{
+        padding: 20px 25px;
+        margin-left:20px;
+    }
+    .slide-img{
+        padding: 0 10px;
+        margin-left:10px;
+    }
+    .left{
+        left:30px;
+        width:30px;
+        height:30px;
+    }
+    .left i{
+        margin-left: 8px;
+    }
+    .right{
+        right:30px;
+        width:30px;
+        height:30px;
+    }
+    .right i{
+        line-height:1.4;
+        margin-left: 8px;
+    }
+    .all-purchase{
+        padding: 10px 10px;
+        margin-left:10px;
+    }
+    .box-main4{
+        margin-top: 30px;
+        padding:10px 10px;
+        margin-left:10px;
+    }
+    .box-main4 .item1-finally{
+        display: flex;
+    }
+    .box-main4 .item1-finally .box-main-text{
+        margin-left:7px;
+    }
+    .box-main4 .item1-finally .box-main-text i{
+        font-size: 18px;
+        margin-top: 7px;
+    }  
 }
